<resources>
    <string name="app_name">Anime San</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>

    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="favourite">favourite</string>
    <string name="completed">completed</string>
    <string name="startWatch">startWatch</string>


    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">Start Watch Anime</string>
    <string name="add_widget">Add widget</string>
    <string name="data">data</string>
    <string name="type">type</string>
    <string name="anime">anime</string>
    <string name="enter_email_address">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="enter_your_registered_email_id">Enter your registered email id</string>
    <string name="we_have_sent_you_instructions_toreset_your_password">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send_reset_email">Failed to send reset email!</string>
    <string name="password_too_short_enter_minimum_6_characters">Password too short, enter minimum 6 characters!</string>
    <string name="createUserwithemailoncomplete">createUserWithEmail:onComplete:</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="error">error</string>
    <string name="img.youtube.com">https://img.youtube.com/vi/</string>
    <string name="hqdefault">/hqdefault.jpg</string>
    <string name="www.youtube.com_watch">https://www.youtube.com/watch?v=</string>
    <string name="anime_saved">Anime Saved</string>
    <string name="all_ages">All Ages</string>
    <string name="manga_saved">Manga Saved</string>
    <string name="manga">manga</string>
    <string name="most_popular_anime_link"><![CDATA[https://kitsu.io/api/edge/anime?sort=popularityRank&page[limit]=20&page[offset]=0]]></string>
    <string name="top_upcoming_anime_link"><![CDATA[https://kitsu.io/api/edge/anime?sort=popularityRank&filter[status]=upcoming&page[limit]=20&page[offset]=0]]></string>
    <string name="top_airing_anime_link"><![CDATA[https://kitsu.io/api/edge/anime?sort=popularityRank,-averageRating&filter[status]=current&page[limit]=20&page[offset]=0]]></string>
    <string name="highest_rated_anime_link"><![CDATA[https://kitsu.io/api/edge/anime?sort=-averageRating&page[limit]=20&page[offset]=0]]></string>
    <string name="most_popular">Most Popular</string>
    <string name="top_upcoming">Top Upcoming</string>
    <string name="top_airing">Top Airing</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_popular_manga_link"><![CDATA[https://kitsu.io/api/edge/manga?sort=popularityRank&page[limit]=20&page[offset]=0]]></string>
    <string name="highest_rated_manga_link"><![CDATA[https://kitsu.io/api/edge/manga?sort=-averageRating&page[limit]=20&page[offset]=0]]></string>
    <string name="top_upcoming_manga_link"><![CDATA[https://kitsu.io/api/edge/manga?sort=popularityRank&filter[status]=upcoming&page[limit]=20&page[offset]=0]]></string>
    <string name="top_publishing_manga_link"><![CDATA[https://kitsu.io/api/edge/manga?sort=-userCount&filter[status]=current&page[limit]=20&page[offset]=0]]></string>
    <string name="top_publishing">Top Publishing</string>
    <string name="anime_rating">Anime Rating</string>
    <string name="start_watch">Start Watch</string>
    <string name="overview">Overview</string>
    <string name="age_guide">Age Guide</string>
    <string name="status">Status</string>
    <string name="episodes">Episodes</string>
    <string name="episodes_count_is">Episodes Count is</string>
    <string name="episode_duration_is">Episode Duration is</string>
    <string name="trailer">Trailer</string>
    <string name="click_here">Click here</string>
    <string name="tangled">Tangled</string>
    <string name="anime_story">Anime Story</string>
    <string name="rating">Rating</string>
    <string name="asd">Asd</string>
    <string name="manga_rating">Manga Rating</string>
    <string name="start_reading">Start Reading</string>
    <string name="chapters">Chapters</string>
    <string name="chapters_count_is">Chapters Count is</string>
    <string name="volume_count_is">volume Count is</string>
    <string name="serialization">Serialization</string>
    <string name="manga_type">Manga Type</string>
    <string name="welcome_in_animesan">Welcome in AnimeSan</string>
    <string name="anime_san">AnimeSan</string>
    <string name="share_content_body">Here is the share content body</string>
    <string name="subject_here">Subject Here</string>
    <string name="share_via">Share via</string>
    <string name="this_image_contain_a_cover_of_anime_or_manga">This image contain a cover of anime or manga</string>
    <string name="this_image_contain_heart_to_save_or_remove_anime_data">this image contain heart to save or remove anime or manga data</string>
    <string name="this_image_contain_a_a_checked_image_to_save_or_remove_anime_data">this image contain a a checked image to save or remove anime or manga data</string>
    <string name="this_image_contain_poster_of_anime_or_manga">this image contain Poster of anime or manga</string>
    <string name="anime_">Anime</string>
    <string name="manga_">Manga</string>
    <string name="anime_library">Anime Library</string>
    <string name="manga_library">Manga Library</string>
    <string name="communicate">Communicate</string>
    <string name="sign_out_">Sign Out</string>
    <string name="user_info">userInfo</string>
    <string name="no_internet">No internet Connection</string>
    <string name="text_plain">text/plain</string>
    <string name="this_is_float_action_button_to_share_content_and_name_of_anime_or_manga">this is Float Action Button to share content and name of anime or manga</string>
    <string name="space">" "</string>
    <string name="test">test</string>
    <string name="test_">test@test.com</string>

</resources>
