<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/app_bar_fragment_detail" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:paddingTop="5dp"
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:nestedScrollingEnabled="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxWidth="@dimen/detail_card_max_width"
                android:elevation="2dp"><!--style="@style/myth"-->
                <!--android:background="#fff"-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manga_rating"
                        android:background="@color/primary"
                        android:textSize="30sp"
                        android:paddingBottom="3dp"
                        android:textAlignment="center"
                        android:id="@+id/r_bar_txt" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:numStars="5"
                        android:stepSize="0.2"
                        android:rating="3"
                        android:isIndicator="true"
                        android:layout_below="@+id/r_bar_txt"
                        android:layout_marginBottom="8dp"
                        android:colorControlNormal="@android:color/darker_gray"
                        android:colorControlActivated="@android:color/holo_red_light"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/rating_txt"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#8fff"
                        android:layout_below="@+id/rating_bar"
                        android:textAlignment="center" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_reading"
                            android:id="@+id/sw_txt"
                            android:textAlignment="center" />

                        <ImageView
                            android:layout_width="@dimen/fav_width"
                            android:layout_height="@dimen/fav_height"
                            android:id="@+id/start_read_img"
                            android:layout_below="@+id/sw_txt"
                            android:src="@drawable/favorite"
                            android:contentDescription="@string/this_image_contain_a_a_checked_image_to_save_or_remove_anime_data" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_centerInParent="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            android:text="@string/favourite"
                            android:id="@+id/f_txt" />

                        <ImageView
                            android:layout_width="@dimen/fav_width"
                            android:layout_height="@dimen/fav_height"
                            android:id="@+id/favourite_img"
                            android:layout_below="@+id/f_txt"
                            android:src="@drawable/favorite"
                            android:contentDescription="@string/this_image_contain_heart_to_save_or_remove_anime_data" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/completed"
                            android:id="@+id/c_txt"
                            android:textAlignment="center" />

                        <ImageView
                            android:layout_width="@dimen/fav_width"
                            android:layout_height="@dimen/fav_height"
                            android:id="@+id/completed_img"
                            android:layout_below="@+id/c_txt"
                            android:src="@drawable/favorite"
                            android:contentDescription="@string/this_image_contain_a_a_checked_image_to_save_or_remove_anime_data" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:background="@color/primary"
                    android:textSize="30sp"
                    android:paddingBottom="3dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/overview"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:paddingBottom="@dimen/detail_body_bottom_margin"
                    android:textSize="@dimen/detail_body_text_size"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                    android:paddingTop="30dp" />
                <!-- android:textColor="@color/lay"-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age_guide"
                    android:background="@color/primary"
                    android:textSize="30sp"
                    android:paddingBottom="3dp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingBottom="8dp"
                    android:id="@+id/age_guide" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:background="@color/primary"
                    android:textSize="30sp"
                    android:paddingBottom="3dp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingBottom="8dp"
                    android:id="@+id/status" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chapters"
                    android:background="@color/primary"
                    android:textSize="30sp"
                    android:paddingBottom="3dp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chapters_count_is"
                    android:textSize="20sp"
                    android:paddingBottom="3dp"
                    android:id="@+id/ch_num" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volume_count_is"
                    android:textSize="20sp"
                    android:paddingBottom="8dp"
                    android:id="@+id/ch_volume" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serialization"
                    android:background="@color/primary"
                    android:textSize="30sp"
                    android:paddingBottom="3dp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:paddingBottom="3dp"
                    android:id="@+id/serialization" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_type"
                    android:background="@color/primary"
                    android:textSize="30sp"
                    android:paddingBottom="3dp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:paddingBottom="3dp"
                    android:id="@+id/mangaType" />


            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
